# mptk

./: Cargo.toml  README.md  grammar.pest
docs/: CODE_OVERVIEW.md  EXAMPLE_IR.md  GRAMMAR.md
examples/: example_1.mod  example_1.mps  example_2.done.mps  example_2.mod  example_2.mps  example_3.mod  example_3.mps  example_4.mod  example_5.mod  five_examples.mod
scripts/: compare_mps.py
src/: data.rs  lib.rs  loader.rs  main.rs  model.rs  utils.rs
src/gmpl/: atoms.rs  expr.rs  grammar.rs  loader.rs  mod.rs
src/ir/: interner.rs  mod.rs  model.rs  op.rs
src/matrix/: bound.rs  constraint.rs  constraints.rs  lookup.rs  mod.rs  param.rs  set.rs
src/mps/: bound.rs  constraints.rs  lookup.rs  mod.rs  output.rs  param.rs  set.rs
tests/: cli.rs  integration_test.rs
