[package]
name = "mptk"
license = "MIT"
authors = ["Chris Arderne <chris@rdrn.me"]
description = "MathProg Translation Kit"
version = "0.0.999"  # set by Github Actions CI
edition = "2024"
repository = "https://github.com/carderne/mptk"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
indexmap = "2.12.1"
itertools = "0.14.0"
log = "0.4.28"
ndarray = "0.17.1"
pest = "2.8.3"
pest_derive = "2.8.3"

[lib]
name = "mptk"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "mptk"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
