[package]
name = "mptk"
license = "MIT"
authors = ["Chris Arderne <chris@rdrn.me"]
description = "MathProg Translation Kit"
version = "0.0.999"  # set by Github Actions CI
edition = "2024"
repository = "https://github.com/carderne/mptk"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
env_logger = "0.11.8"
indexmap = "2.12.1"
itertools = "0.14.0"
lasso = { version = "0.7.3", features = ["multi-threaded"] }
log = "0.4.28"
pest = "2.8.3"
pest_derive = "2.8.3"
rayon = "1.11.0"
smallvec = "1.15.1"

[lib]
name = "mptk"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "mptk"
path = "src/main.rs"

[profile.release]
debug = true

# These add about a 5-10% speedup
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
